Add Formspree form endpoint

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
         <section class="cta-form" role="form" aria-label="Newsletter signup">
             <h2>Get Early Access</h2>
             <p>Join 500+ bettors waiting for launch</p>
-            <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST" id="signup-form">
+              <form action="https://formspree.io/f/xyzpvynj" method="POST" id="signup-form">
                 <div class="form-group">
                     <label for="email" class="visually-hidden">Email address</label>
                     <input 
